Add Rubocop Rails and Performance extensions

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,1 +1,21 @@
+require:
+  - rubocop-rails
+  - rubocop-performance
+
 inherit_from: .rubocop_todo.yml
+
+Rails:
+  Enabled: true
+
+AllCops:
+  TargetRubyVersion: 2.7.1
+  TargetRailsVersion: 7.0.4
+  DisplayCopNames: true
+  NewCops: enable
+  Exclude:
+    - bin/**/*
+    - db/migrate/*
+    - db/*
+    - vendor/**/*
+    - tmp/**/*
+    - node_modules/**/*
